2010-06-13  Murray Cumming  <murrayc@murrayc.com>

	Node::find(): Cope with weird use of _private in xmlNodeSet.

	* libxml++/nodes/node.cc: The xmlNodeSet seems to contain extra xmlNodes that 
	were never given to on_libxml_construct(). Those xmlNodes seem to abuse 
	private_, where we find our real xmlNodes containing our C++ Nodes.
	This fixes bug #386013 (Max Kirillov) though it depends on undocumented 
	libxml behaviour.

2010-06-13  Murray Cumming  <murrayc@murrayc.com>>

	Node::find(): Use libxml functions instead of direct C access.

	* libxml++/nodes/node.cc: Use xmlXPathNodeSetIsEmpty(), 
	xmlXPathNodeSetGetLength() and xmlXPathNodeSetItem() instead of direct 
	xmlNodeSet struct access.

2010-06-13  Murray Cumming  <murrayc@murrayc.com>

	Manual: Use git.gnome.org as the link to the examples source code.

	* docs/manual/libxml++_without_code.xml: Use git.gnome.org for the examples 
	url base, as we do in gtkmm-documentation.

2010-06-13  Murray Cumming  <murrayc@murrayc.com>

	Restore the mm-common make target and update a link.

	* Makefile.am: Restore (and update) the post-html target that was lost when 
	we redid the build system for mm-common.
	* docs/index.html: Change the link to the manual to point to its new location 
	at library.gnome.org.

2.30.1:

2010-05-04  Murray Cumming  <murrayc@murrayc.com>

    Documentation: Don't hide undocumented API.

	* docs/reference/Doxyfile.in: Use the same options as gtkmm (mostly).
    In particular, don't hide undocumented API, such as NodeSet, to fix
    bug #583412 (Hubert Figuiere).

2010-05-04  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Improvements.

	* libxml++/libxml++.h: Expand the main page text, linking to the tutorial
    and to important classes.
	* libxml++/parsers/domparser.h:
	* libxml++/schema.h: Correct the class descriptions.
	* libxml++/parsers/textreader.h: Add a class description.
	* libxml++/nodes/element.h:
	* libxml++/nodes/node.h:
	* libxml++/parsers/saxparser.h: